--- a/views/index.mustache
+++ b/views/index.mustache
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mustache Activity</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 
   </head>
   <body>
@@ -21,13 +20,13 @@
               <div class="robot">
                 <img src="{{avatar}}" alt="">
                 <h2><a href="http://localhost:3000/index/{{id}}">{{name}}</a></h2>
-                {{#employed}}
+                {{#job}}
                   <p>{{job}}</p>
                   <p>{{company}}</p>
-                {{/employed}}
-                {{^employed}}
+                {{/job}}
+                {{^job}}
                   <p>Available for hire</p>
-                {{/employed}}
+                {{/job}}
               </div>
             {{/users}}
           </ul>
