--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,15 @@
+.container h1{
+  text-align: center;
+}
+
 div.robot{
   border: 1px solid gray;
   border-radius: 3px;
   margin: 10px;
   padding: 5px;
+  text-align: center;
+  height: 300px;
+  width: 230px;
   /*align-items: center;*/
   /*align-content: center;*/
 }
@@ -30,7 +37,10 @@ div.robot-info{
 
 .right-of-pic h1{
   font-size: 40px;
+}
 
+span{
+  color: red;
 }
 
 div.top-row{
@@ -51,6 +61,18 @@ div.bottom-row{
   /*align-content: center;*/
 }
 
+td{
+  padding: 0 20px;
+  vertical-align: top;
+}
+
+tr.upper{
+  line-height: 2em;
+}
+
+td.bold{
+  font-weight: bold;
+}
 /*div.bottom-left{
   display: block;
 }
