--- a/views/index.mustache
+++ b/views/index.mustache
@@ -25,7 +25,7 @@
                   <p>{{company}}</p>
                 {{/job}}
                 {{^job}}
-                  <p>Available for hire</p>
+                  <span>Available for hire</span>
                 {{/job}}
               </div>
             {{/users}}
